--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="block md:hidden">
       <div class="flex justify-between items-center h-24">
 
-        <div class="ml-4"><img src="image/new-sudo.png" alt="" class="h-20 w-20"></div>
+        <div class="ml-4"><img src="image/LogoMakr-4fT483.png" alt="" class="h-20 w-20"></div>
 
         <div class="mr-4">
           <button onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button>
